--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "node-sass": "^5.0.0"
   },
@@ -22,8 +22,10 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.47.0",
     "sass-loader": "^10.1.1",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.46.0"
+    "vue-svg-loader": "^0.16.0",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.46.0",
+    "webpack-chain": "6.5.1"
   },
   "eslintConfig": {
     "root": true,
