--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "node-sass": "^5.0.0",
+    "normalize.css": "^8.0.1",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.3",
-    "node-sass": "^5.0.0"
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
